RESOLVED FIXED166930
Value of a color input does not update visually when using setAttribute
https://bugs.webkit.org/show_bug.cgi?id=166930
Summary Value of a color input does not update visually when using setAttribute
Darryl Pogue
Reported 2017-01-11 10:22:39 PST
With an <input type="color">, if you set the value dynamically via setAttribute('value', '#ff0000') it still shows the input color visually as black rather than the updated value (red, in this case). The actual value of the input is correct, and if you open the color picker then it shows the correct value selected. Here's an example JSFiddle which starts out black and sets the value via setAttribute after 1.5 seconds: https://jsfiddle.net/1wLsa0jc/
Attachments
Patch (3.97 KB, patch)
2021-05-19 16:09 PDT, Aditya Keerthi
no flags
Radar WebKit Bug Importer
Comment 1 2017-01-11 19:13:22 PST
Aditya Keerthi
Comment 2 2021-05-19 16:09:35 PDT
Aditya Keerthi
Comment 3 2021-05-20 06:18:19 PDT
Thanks for the review!
EWS
Comment 4 2021-05-20 06:21:49 PDT
Committed r277778 (237939@main): <https://commits.webkit.org/237939@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 429108 [details].
Note You need to log in before you can comment on or make changes to this bug.