Value of a color input does not update visually when using setAttribute https://bugs.webkit.org/show_bug.cgi?id=166930 <rdar://problem/29983218>

Reviewed by Simon Fraser.

Source/WebCore:

Test: fast/forms/color/color-input-set-attribute-value.html

* html/ColorInputType.cpp:
(WebCore::ColorInputType::attributeChanged):

Update the color swatch when the value attribute is changed.

* html/ColorInputType.h:

LayoutTests:

* fast/forms/color/color-input-set-attribute-value-expected.html: Added.
* fast/forms/color/color-input-set-attribute-value.html: Added.


Canonical link: https://commits.webkit.org/237939@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277778 268f45cc-cd09-0410-ab3c-d52691b4dbfc